# gipFFmpegVideo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
prebuilts/include/: H5Epubgen.h  caca++.h  caca.h  caca0.h  x264_config.h
prebuilts/include/OpenEXR/: IlmBaseConfig.h  OpenEXRConfig.h
prebuilts/include/freetype2/freetype/config/: ftmodule.h  ftoption.h
prebuilts/include/glib-2.0/gio/: gioenumtypes.h
prebuilts/include/glib-2.0/gobject/: glib-enumtypes.h
prebuilts/include/libavutil/: ffversion.h
prebuilts/include/pango-1.0/pango/: pango-features.h
prebuilts/include/shared/: h5a.mod  h5d.mod  h5ds.mod  h5g.mod  h5i.mod  h5lt.mod  h5lt_const.mod  h5p.mod  h5r.mod  h5tb.mod  h5vl.mod  h5z.mod
prebuilts/include/static/: h5_gen.mod  h5e.mod  h5f.mod  h5global.mod  h5im.mod  h5l.mod  h5o.mod  h5s.mod  h5t.mod  h5tb_const.mod  hdf5.mod
prebuilts/lib/pkgconfig/: ao.pc
prebuilts/lib/win32/: libhdf5.settings
prebuilts/lib/win32/cmake/: LeptonicaConfig.cmake
prebuilts/lib/win32/cmake/Ogg/: OggTargets.cmake
prebuilts/lib/win32/cmake/OpenAL/: OpenALConfig-release.cmake  OpenALConfig.cmake
prebuilts/lib/win32/cmake/OpenEXR/: OpenEXRConfig.cmake  OpenEXRConfigVersion.cmake
prebuilts/lib/win32/cmake/portaudio/: portaudioTargets-release.cmake  portaudioTargets.cmake
prebuilts/lib/win32/pkgconfig/: IlmBase.pc  OpenEXR.pc  aom.pc  caca++.pc  caca.pc  celt.pc  dav1d.pc  ffms2.pc  freetype2.pc  frei0r.pc  gavl.pc  gio-2.0.pc  gio-windows-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  haisrt.pc  lept.pc  libass.pc  libavcodec.pc  libavfilter.pc  libavutil.pc  libbluray.pc  libexif.pc  liblsmash.pc  libmfx.pc  libmodplug.pc  libmysofa.pc  ogg.pc  openal.pc  opencore-amrnb.pc  opencore-amrwb.pc  opus.pc  pango.pc  pangocairo.pc  pangofc.pc  pangoft2.pc  pangoot.pc  (+15 more)
src/: .cproject  .project  gAudioSampleRingBuffer.cpp  gAudioSampleRingBuffer.h  gRingBuffer.cpp  gRingBuffer.h  gVideoFrameRingBuffer.cpp  gVideoFrameRingBuffer.h  gipAVSound.cpp  gipAVSound.h  gipFFmpegUtils.cpp  gipFFmpegUtils.h  gipFFmpegVideo.cpp  gipFFmpegVideo.h
